Added Inital Text

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+
+    </head>
+    <body>
+        <p>Maybe there just needs to be some actual text on the screen.</p>
+    </body>
 </html>
