favicon.ico link in head added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!--Defer is important because it loads the js file after the html file has loaded which is needed because then the js file can reach into the html to find document elements,
         it can't find document elements if it's loaded before the html file because the html elements haven't loaded yet-->
         <title>Changing Doc Text</title>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     </head>
     <body>
         <header>
