Check ids on other elements
Remember to check id's on other elements, even of those of not the same type of the element you're checking. You can save yourself 20 minutes of the add task button submitting blank spaces when the input field is full of text. The form had the same id :p

--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                     <span class="delete">Delete</span>
                 </li>
             </ul>
+            <!-- note to self, when using id's in js, make sure to check if the id pops up on not only elements of the same type, but other nodes as well such as forms -->
             <form id="addTask">
-                <input type="text" name="addTask" placeholder="Add a task here!">
+                <input type="text" name="addTask" placeholder="Add a task here!" id="addTaskInput">
                 <button>Add Task</button>
                 <textarea name="otherNotes" id="otherNotes" cols="30" rows="10" placeholder="Did you have any other notes you wanted to write yourself?"></textarea>
             </form>
