youtube video checkbox and input reset
I added a checkbox and border for an upcoming option to bring up youtube so you can work alongside a youtube video. Also made it so the input box resets on add task button press. For some reason you can't use pre-defined variables and you have to rewrite the id from the doc and set the value to '';

--- a/index.html
+++ b/index.html
@@ -37,5 +37,11 @@
                 <textarea name="otherNotes" id="otherNotes" cols="30" rows="10" placeholder="Did you have any other notes you wanted to write yourself?"></textarea>
             </form>
         </section>
+        <section id="otherOptions">
+            <form>
+                <label for="youtube">YouTube Videos?</label>
+                <input type="checkbox" id="youtube">
+            </form>
+        </section>
     </body>
 </html>
