--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <!--importing css stylesheet-->
         <link rel="stylesheet" href="toDoList.css">
         <link rel="icon" type="image/x-icon" href="favicon (1).ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <section id="toDoList">
@@ -19,6 +20,7 @@
             <ul>
                 <li>
                     <span class="task">Wash dishes(example task 1)</span>
+                    <input type="checkbox" class="checkBox">
                     <span class="delete">Delete</span>
                 </li>
                 <li>
@@ -39,8 +41,8 @@
         </section>
         <section id="otherOptions">
             <form>
-                <label for="youtube">YouTube Videos?</label>
-                <input type="checkbox" id="youtube">
+                <label for="checkBoxes">Check Boxes?</label>
+                <input type="checkbox" id="checkBoxes">
             </form>
         </section>
     </body>
