--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--importing css stylesheet-->
         <link rel="stylesheet" href="toDoList.css">
         <link rel="icon" type="image/x-icon" href="favicon (1).ico">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <section id="toDoList">
