Testing out Responsiveness Changes
Updated Css with media queries so it has specific designs for different width ranges.

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <h1>Tasks</h1>
                 <!-- <textarea rows="1" cols="200" placeholder="What's your goal for today?"></textarea> -->
                 <form>
-                    <label for="todaysGoal">Today's Goal:</label>
+                    <label for="todaysGoal" id="todaysGoalLabel">Today's Goal:</label>
                     <input type="text" placeholder="What's your goal for today?" id="todaysGoal" autocomplete="off">
                 </form>
                 <ul>
                     <li>
                         <span class="task">Wash dishes(example task 1)</span>
-                        <input type="checkbox" class="checkBox">
+                        <!-- <input type="checkbox" class="checkBox"> -->
                         <span class="delete">Delete</span>
                     </li>
                     <li>
@@ -42,13 +42,13 @@
                 </form>
             </div>
         </section>
-        <section class="otherOptions">
+        <!-- <section class="otherOptions">
             <div class="checkBoxes">
                 <form>
                     <label for="checkBoxes">Check Boxes?</label>
                     <input type="checkbox" id="checkBox">
                 </form>
             </div>
-        </section>
+        </section> -->
     </body>
 </html>
