Fixes and Additions
Changelog:

-Added edit button and functionality
-Added svg and svg credit
-Fixed favicon file syntax lol

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>ToDo List</title>
         <!--importing css stylesheet-->
         <link rel="stylesheet" href="toDoList.css">
-        <link rel="icon" type="image/x-icon" href="favicon (1).ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
     </head>
@@ -24,14 +24,17 @@
                         <span class="task">Wash dishes(example task 1)</span>
                         <!-- <input type="checkbox" class="checkBox"> -->
                         <span class="delete">Delete</span>
+                        <img src="editButton.svg" width="20" height="20" class="svg">
                     </li>
                     <li>
                         <span class="task">Clean room(example task 2)</span>
                         <span class="delete">Delete</span>
+                        <img src="editButton.svg" width="20" height="20" class="svg">
                     </li>
                     <li>
                         <span class="task">Take out trash(example task 3)</span>
                         <span class="delete">Delete</span>
+                        <img src="editButton.svg" width="20" height="20" class="svg">
                     </li>
                 </ul>
                 <!-- note to self, when using id's in js, make sure to check if the id pops up on not only elements of the same type, but other nodes as well such as forms -->
@@ -50,5 +53,8 @@
                 </form>
             </div>
         </section> -->
+        <footer>
+            <p><em>Vectors and icons by <a href="https://www.figma.com/@thevladc?ref=svgrepo.com" target="_blank">Vlad Cristea</a> in CC Attribution License via <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a></em></p>
+        </footer>
     </body>
 </html>
