Bunch of Additions and Changes
Changelog:
-Footer now square
-Added dark mode feature
-Added option to take away textarea and today's goal for more removed white on screen

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     </head>
     <body>
         <section>
-            <div class="toDoList">
+            <div class="border">
                 <h1>Tasks</h1>
                 <!-- <textarea rows="1" cols="200" placeholder="What's your goal for today?"></textarea> -->
                 <form>
-                    <label for="todaysGoal" id="todaysGoalLabel">Today's Goal:</label>
+                    <label for="todaysGoal">Today's Goal:</label>
                     <input type="text" placeholder="What's your goal for today?" id="todaysGoal" autocomplete="off">
                 </form>
                 <ul>
@@ -45,16 +45,16 @@
                 </form>
             </div>
         </section>
-        <!-- <section class="otherOptions">
-            <div class="checkBoxes">
+        <section class="border">
                 <form>
-                    <label for="checkBoxes">Check Boxes?</label>
-                    <input type="checkbox" id="checkBox">
+                    <button id="darkMode">Dark Mode</button>
+                    <button id="hideWhiteArea">Hide Goal and Notes</button>
                 </form>
-            </div>
-        </section> -->
+        </section>
         <footer>
-            <p><em>Vectors and icons by <a href="https://www.figma.com/@thevladc?ref=svgrepo.com" target="_blank">Vlad Cristea</a> in CC Attribution License via <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a></em></p>
+            <div class="footer">
+                <p><em>Vectors and icons by <a href="https://www.figma.com/@thevladc?ref=svgrepo.com" target="_blank">Vlad Cristea</a> in CC Attribution License via <a href="https://www.svgrepo.com/" target="_blank">SVG Repo</a></em></p>
+            </div>
         </footer>
     </body>
 </html>
